--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "date-fns": "^2.1.0",
+    "faker": "^4.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "0.9.5"
