--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "date-fns": "^2.1.0",
     "faker": "^4.1.0",
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
   },
@@ -78,6 +81,9 @@
     }
   },
   "babel": {
+    "plugins": [
+      "transform-decorators-legacy"
+    ],
     "presets": [
       "react-app"
     ]
