--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.4.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "date-fns": "^2.1.0",
     "faker": "^4.1.0",
+    "material-ui-chip-input": "^1.0.0",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-select-material-ui": "^5.1.0"
   },
   "devDependencies": {
     "autoprefixer": "6.7.2",
