--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.4.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "date-fns": "^2.1.0",
     "faker": "^4.1.0",
